--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.atlassian.jira</groupId>
     <artifactId>jql-kotlin</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
 
     <scm>
         <url>https://bitbucket.org/atlassianlabs/jql-kotlin</url>
